--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="loading" parent="android:Theme.DeviceDefault.Light.Dialog">
+            <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>
+            <item name="DialogSpotColor">@color/colorPrimary</item>
+            <item name="DialogSpotCount">5</item>
+    </style>
 </resources>
