--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,9 @@
             <item name="DialogSpotColor">@color/colorPrimary</item>
             <item name="DialogSpotCount">5</item>
     </style>
+
+    <style name="Widget.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
+    <item name="fontFamily">@font/numans</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
