--- a/app/src/main/res/layout/view_order_details_alert.xml
+++ b/app/src/main/res/layout/view_order_details_alert.xml
@@ -1,6 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/border_rect"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/pickoff_dtl_TextVIew"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/edittext_background"
+        android:drawableStart="@drawable/ic_my_location_black_24dp"
+        android:drawableLeft="@drawable/ic_my_location_black_24dp"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/numans"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/some_address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/order_no_dtl_TextView" />
+
+    <TextView
+        android:id="@+id/dropoff_dtl_TextVIew"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/edittext_background"
+        android:drawableStart="@drawable/ic_location_on_black_24dp"
+        android:drawableLeft="@drawable/ic_location_on_black_24dp"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/numans"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/some_address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pickoff_dtl_TextVIew" />
+
+    <TextView
+        android:id="@+id/date_time_dtl_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="@string/tue_26_02_2019_12_20_am"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dropoff_dtl_TextVIew" />
+
+    <TextView
+        android:id="@+id/order_status_dtl_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_timeline_black_24dp"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/numans"
+        android:gravity="center"
+        android:text="@string/trip_ongoing"
+        app:layout_constraintStart_toStartOf="@+id/date_time_dtl_TextView"
+        app:layout_constraintTop_toBottomOf="@+id/date_time_dtl_TextView"
+        android:drawableStart="@drawable/ic_timeline_black_24dp" />
+
+    <TextView
+        android:id="@+id/service_type_dtl_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/xs"
+        android:fontFamily="@font/numans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dropoff_dtl_TextVIew" />
+
+    <TextView
+        android:id="@+id/order_fare_dtl_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/numans"
+        app:layout_constraintEnd_toEndOf="@+id/service_type_dtl_TextView"
+        app:layout_constraintTop_toBottomOf="@+id/service_type_dtl_TextView" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="32dp"
+        android:orientation="horizontal"
+        android:padding="1dp"
+        android:weightSum="2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/order_status_dtl_TextView">
+
+        <Button
+            android:id="@+id/cancel_order_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="2.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/numans"
+            android:text="@string/cancel"
+            android:layout_marginEnd="2.5dp" />
+
+        <Button
+            android:id="@+id/track_order_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/numans"
+            android:text="@string/track"
+            android:layout_marginStart="2.5dp" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/order_no_dtl_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:fontFamily="@font/numans"
+        android:gravity="center"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
